config/300-controller.yaml
# Copyright 2021 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-gateway-api-controller
  namespace: knative-serving
  labels:
    networking.knative.dev/ingress-provider: net-gateway-api
    app.kubernetes.io/component: net-gateway-api
    app.kubernetes.io/version: devel
    app.kubernetes.io/name: knative-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: net-gateway-api-controller
  template:
    metadata:
      labels:
        app: net-gateway-api-controller
    spec:
      # To avoid node becoming SPOF, spread our replicas to different nodes.
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: net-gateway-api-controller
              topologyKey: kubernetes.io/hostname
            weight: 100

      serviceAccountName: controller
      containers:
      - name: controller
        # This is the Go import path for the binary that is containerized
        # and substituted here.
        image: ko://knative.dev/net-gateway-api/cmd/controller
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          httpGet:
            path: /readiness
            port: probes
            scheme: HTTP
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: probes
            scheme: HTTP
          periodSeconds: 5
          failureThreshold: 6
        ports:
        - name: metrics
          containerPort: 9090
        - name: profiling
          containerPort: 8008
        - name: probes
          containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
