config/400-webhook-service.yaml
# Copyright 2024 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: net-gateway-api-webhook
  namespace: knative-serving
  labels:
    role: net-gateway-api-webhook
    app.kubernetes.io/component: net-gateway-api
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: devel
    networking.knative.dev/ingress-provider: gateway-api
spec:
  ports:
    # Define metrics and profiling for them to be accessible within service meshes.
    - name: http-metrics
      port: 9090
      targetPort: metrics
    - name: http-profiling
      port: 8008
      targetPort: profiling
    - name: https-webhook
      port: 443
      targetPort: https-webhook
  selector:
    app: net-gateway-api-webhook
