config/300-gateway-local.yaml
# Copyright 2021 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: test-local-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  addresses:
  - type: NamedAddress
    value: knative-local-gateway
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          networking.knative.dev/visibility: "cluster-local"
      namespaces:
        from: "All"
